--- a/shop now.html
+++ b/shop now.html
@@ -149,9 +149,9 @@
     <div class="container mx-auto px-4 py-3">
       <div class="flex items-center justify-between">
         <div class="flex items-center space-x-6">
-          <a href="#" class="flex items-center">
-            
-            <span class="ml-2 text-xl font-bold text-primary-600 hidden sm:block">UniversalCart</span>
+          <a href="" class="flex items-center">
+            <img src="icons/Logo.png" alt="Universal Cart Logo">
+            <span class="ml-2 text-xl font-bold text-primary-600 hidden sm:block"></span>
           </a>
           
           <div class="relative hidden lg:block">
