--- a/TRY 11/admin/admin/orders.html
+++ b/TRY 11/admin/admin/orders.html
@@ -50,14 +50,13 @@
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyCUCTY-wtfBM_vI8DYEHMEBhyfdTrP9GjY",
-      authDomain: "login-6c546.firebaseapp.com",
-      databaseURL: "https://login-6c546-default-rtdb.firebaseio.com",
-      projectId: "login-6c546",
-      storageBucket: "login-6c546.appspot.com",
-      messagingSenderId: "705543890950",
-      appId: "1:705543890950:web:88bbbb2121bb4111dd3b87",
-      measurementId: "G-46NSXGYS8G"
+        apiKey: import.meta.env.VITE_FIREBASE_API_KEY,
+    authDomain: import.meta.env.VITE_FIREBASE_AUTH_DOMAIN,
+    databaseURL: import.meta.env.VITE_FIREBASE_DATABASE_URL,
+    projectId: import.meta.env.VITE_FIREBASE_PROJECT_ID,
+    storageBucket: import.meta.env.VITE_FIREBASE_STORAGE_BUCKET,
+    messagingSenderId: import.meta.env.VITE_FIREBASE_MESSAGING_SENDER_ID,
+    appId: import.meta.env.VITE_FIREBASE_APP_ID,
     };
 
     const app = initializeApp(firebaseConfig);
